[gd_scene load_steps=10 format=3 uid="uid://brseetigig4we"]

[ext_resource type="Texture2D" uid="uid://ddn4yjglnibl0" path="res://Art/Free Pixel Art Forest/Preview/Background.png" id="1_3h41h"]
[ext_resource type="Script" path="res://Scenes/Scene_1/Scene_1.gd" id="1_xew6c"]
[ext_resource type="TileSet" uid="uid://cxbffb7mcq178" path="res://Assets/Tilemap_Presets/Template_Castelo.tres" id="2_ujjc5"]
[ext_resource type="PackedScene" uid="uid://bagnku5x05d4v" path="res://character_body_2d.tscn" id="3_pya8d"]
[ext_resource type="Texture2D" uid="uid://btdfbp4lkbnhm" path="res://Assets/heroarmed/SkellyBoyAlgae.png" id="4_756g7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qewwi"]
size = Vector2(59, 89)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ekb7"]
size = Vector2(40, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4hbo"]
size = Vector2(47, 72.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2spdq"]
size = Vector2(329, 27)

[node name="Scene_1" type="Node2D"]
script = ExtResource("1_xew6c")

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(-109, -268)
texture = ExtResource("1_3h41h")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_ujjc5")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(-196589, 2293760, 20, -131053, 2293760, 20, -196588, 2359296, 20, -131052, 2359296, 20, -196587, 2424832, 20, -131051, 2424832, 20, -65517, 2293760, 21, -65516, 2359296, 21, -65515, 2424832, 21, 131091, 2293760, 20, 196627, 2293760, 20, 262163, 2293760, 20, 131092, 2359296, 20, 196628, 2359296, 20, 262164, 2359296, 20, 131093, 2424832, 20, 196629, 2424832, 20, 262165, 2424832, 20, 327699, 2293760, 21, 327700, 2359296, 21, 327701, 2424832, 21, -983020, 2293760, 20, -917484, 2293760, 20, -851948, 2293760, 20, -983019, 2293760, 20, -917483, 2359296, 20, -851947, 2359296, 20, -983018, 2359296, 20, -917482, 2424832, 20, -851946, 2424832, 20, -983017, 2424832, 20, -917481, 2424832, 20, -851945, 2424832, 20, -786411, 2359296, 21, -786410, 2424832, 21, -786409, 2424832, 21, -786412, 2293760, 21, -196598, 655361, 6, -131062, 655361, 7, -196596, 655361, 6, -131060, 655361, 7, -458738, 655361, 6, -393202, 655361, 7, -327666, 655361, 6, -262130, 655361, 7, -196594, 655361, 6, -131058, 655361, 7, -458736, 655361, 6, -393200, 655361, 7, -327664, 655361, 6, -262128, 655361, 7, -196592, 655361, 6, -131056, 655361, 7, -65526, 655361, 7, -65524, 655361, 7, -65522, 655361, 7, -65520, 655361, 7, 131087, 655361, 6, 131088, 655361, 6, 327695, 655361, 7, 327696, 655361, 7, -589810, 655361, 6, -524274, 655361, 7, -589808, 655361, 6, -524272, 655361, 7, -327668, 655361, 6, -262132, 655361, 7, -327670, 655361, 6, -262134, 655361, 7, -262123, 2424832, 20, -262124, 2424832, 20, -262125, 2424832, 20)
layer_1/name = "Parede"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(196610, 655360, 19, 196611, 720896, 19, 458754, 262144, 16, 458755, 524288, 19, 458756, 589824, 19, 196612, 589824, 19, -393196, 262144, 1, -327660, 262144, 2, -589806, 2424832, 10, -589805, 2490368, 10, -655342, 2424832, 12, -655341, 2490368, 12, -720878, 1245184, 27, -720877, 1310720, 27, -720876, 1376256, 27, -458732, 458752, 3, -524268, 458752, 2, -589804, 458752, 1, -655340, 1441792, 20, -655339, 655360, 2, -589803, 655360, 3, -524267, 524288, 2, -458731, 524288, 3, -393195, 327680, 1, -327659, 327680, 2, -720875, 1441792, 20, -1048558, 1245184, 27, -1048557, 1310720, 27, -1048556, 1376256, 27, -524270, 2424832, 11, -458734, 2424832, 12, -393198, 2424832, 10, -327662, 2424832, 11, -524269, 2490368, 11, -458733, 2490368, 12, -393197, 2490368, 10, -327661, 2490368, 11, -1245166, 2424832, 10, -1179630, 2424832, 11, -1114094, 2424832, 12, -1245165, 2490368, 10, -1179629, 2490368, 11, -1114093, 2490368, 12, -1441774, 1245184, 27, -1376238, 2424832, 11, -1310702, 2424832, 12, -1441773, 1310720, 27, -1376237, 2490368, 11, -1310701, 2490368, 12, -1441772, 1376256, 27, -1441771, 1245184, 27, -1441770, 1310720, 27, -1441769, 1376256, 27, -1441768, 1245184, 27, -1441767, 1310720, 27, -1441766, 1376256, 27, -1245163, 262144, 1, -1179628, 1441792, 20, -1245164, 458752, 3, -1179627, 262144, 2, -1114092, 1441792, 20, -1114091, 262144, 3, -1245162, 524288, 3, -1179626, 327680, 2, -1245161, 589824, 3, -1179625, 393216, 2, -1114090, 327680, 3, -1114089, 393216, 3, -655338, 720896, 2, -589802, 720896, 3, -655337, 1441792, 20, -589801, 655360, 1, -720874, 1441792, 20, -720873, 1441792, 20, -524266, 589824, 2, -458730, 589824, 3, -524265, 655360, 2, -458729, 655360, 3, -393194, 393216, 1, -327658, 393216, 2, -393193, 1441792, 20, -327657, 1441792, 20, -262122, 393216, 3, -196586, 1441792, 20, -262121, 1441792, 20, -196585, 1441792, 20, -1048555, 1441792, 20, -1048554, 1441792, 20, -1048553, 1441792, 20, -1376236, 458752, 1, -1310700, 458752, 2, -1376235, 524288, 1, -1310699, 524288, 2, -1376234, 589824, 1, -1310698, 589824, 2, -1376233, 458752, 1, -1310697, 458752, 2, -1376232, 524288, 1, -1310696, 524288, 2, -1245160, 524288, 3, -1376231, 589824, 1, -1310695, 589824, 2, -1245159, 589824, 3, -1376230, 655360, 1, -1310694, 655360, 2, -1245158, 655360, 3, -1376229, 720896, 1, -1310693, 720896, 2, -1245157, 720896, 3, -1179624, 458752, 1, -1114088, 458752, 2, -1048552, 458752, 3, -1179623, 524288, 1, -1114087, 524288, 2, -1048551, 524288, 3, -1179622, 589824, 1, -1114086, 589824, 2, -1048550, 589824, 3, -1179621, 655360, 1, -1114085, 655360, 2, -1048549, 655360, 3, -1179620, 720896, 1, -1114084, 720896, 2, -1048548, 720896, 3, 262140, 262144, 16, 327676, 589824, 20, 393212, 589824, 20, 458748, 589824, 20, 524284, 589824, 20, 262141, 524288, 19, 327677, 327680, 17, 393213, 327680, 17, 458749, 327680, 17, 524285, 327680, 17, 262142, 589824, 19, 327678, 589824, 20, 393214, 589824, 20, 458750, 589824, 20, 524286, 589824, 20, 262143, 262144, 16, 327679, 589824, 20, 393215, 589824, 20, 458751, 589824, 20, 524287, 589824, 20, 262144, 327680, 17, 327680, 327680, 17, 393216, 327680, 17, 458752, 327680, 17, 196609, 589824, 19, 458753, 196608, 15, 262137, 262144, 16, 327673, 589824, 20, 393209, 589824, 20, 458745, 589824, 20, 524281, 589824, 20, 262138, 524288, 19, 327674, 327680, 17, 393210, 327680, 17, 458746, 327680, 17, 524282, 327680, 17, 262139, 589824, 19, 327675, 589824, 20, 393211, 589824, 20, 458747, 589824, 20, 524283, 589824, 20, -7, 131072, 12, 65529, 131072, 13, 131065, 131072, 14, 196601, 131072, 15, -6, 196608, 12, 65530, 196608, 13, 131066, 196608, 14, 196602, 196608, 15, -262151, 131072, 12, -196615, 131072, 13, -131079, 131072, 14, -65543, 131072, 15, -262150, 196608, 12, -196614, 196608, 13, -131078, 196608, 14, -65542, 196608, 15, -524295, 131072, 12, -458759, 131072, 13, -393223, 131072, 14, -327687, 131072, 15, -524294, 196608, 12, -458758, 196608, 13, -393222, 196608, 14, -327686, 196608, 15, -786439, 131072, 12, -720903, 131072, 13, -655367, 131072, 14, -589831, 131072, 15, -786438, 196608, 12, -720902, 196608, 13, -655366, 196608, 14, -589830, 196608, 15, -1048583, 131072, 12, -983047, 131072, 13, -917511, 131072, 14, -851975, 131072, 15, -1048582, 196608, 12, -983046, 196608, 13, -917510, 196608, 14, -851974, 196608, 15, -1310727, 131072, 12, -1245191, 131072, 13, -1179655, 131072, 14, -1114119, 131072, 15, -1310726, 196608, 12, -1245190, 196608, 13, -1179654, 196608, 14, -1114118, 196608, 15, 196608, 524288, 19, 458757, 262144, 16, 458758, 524288, 19, 458759, 589824, 19, 458760, 262144, 16, 458761, 524288, 19, 458762, 589824, 19, 458763, 655360, 19, 458764, 720896, 19, 458765, 589824, 19, 458766, 262144, 16, 458767, 524288, 19, 458768, 589824, 19, 458769, 262144, 16, 458770, 524288, 19, 458771, 589824, 19, 458772, 262144, 16, 458773, 2490368, 16, 524293, 589824, 20, 524294, 327680, 17, 524295, 589824, 20, 524296, 589824, 20, 524297, 327680, 17, 524298, 589824, 20, 524299, 655360, 20, 524300, 327680, 17, 524301, 327680, 17, 524302, 589824, 20, 524303, 327680, 17, 524304, 589824, 20, 524305, 589824, 20, 524306, 327680, 17, 524307, 589824, 20, 524308, 589824, 20, 524309, 2490368, 17, 589817, 589824, 20, 589818, 327680, 17, 589819, 589824, 20, 589820, 589824, 20, 589821, 327680, 17, 589822, 589824, 20, 589823, 589824, 20, 524288, 327680, 17, 524289, 589824, 20, 524290, 655360, 20, 524291, 327680, 17, 524292, 327680, 17, 262145, 196608, 12, 327681, 196608, 13, 393217, 196608, 14, 2, 1966080, 25, 131074, 1966080, 27, 65538, 1966080, 26, 3, 1638400, 25, 65539, 1638400, 26, 131075, 1638400, 27, 4, 1638400, 25, 65540, 1638400, 26, 131076, 1638400, 27, 65536, 1835008, 26, 131072, 1835008, 27, 1, 1900544, 25, 65537, 1900544, 26, 131073, 1900544, 27, -393206, 1245184, 27, -393205, 1310720, 27, -393204, 1376256, 27, -655346, 1245184, 27, -655345, 1310720, 27, -655344, 1376256, 27, -131050, 1441792, 20, -131049, 1441792, 20, -65513, 1441792, 20, -65514, 1441792, 20, 8, 262144, 16, 65544, 589824, 20, 9, 524288, 19, 65545, 327680, 17, 10, 589824, 19, 65546, 589824, 20, 11, 655360, 19, 65547, 655360, 20, 12, 720896, 19, 65548, 327680, 17, 13, 589824, 19, 65549, 589824, 20, 14, 262144, 16, 65550, 589824, 20, 15, 524288, 19, 65551, 327680, 17, 16, 589824, 19, 65552, 589824, 20, 17, 262144, 16, 65553, 589824, 20, 18, 524288, 19, 65554, 327680, 17, 19, 589824, 19, 65555, 589824, 20, 20, 262144, 16, 65556, 589824, 20, 21, 2490368, 16, 65557, 2490368, 17, 22, 1441792, 20, 65558, 1441792, 20, 327701, 65543, 0, 327700, 65543, 0, 327699, 65543, 0, 327698, 65543, 0, 327697, 65543, 0, 327696, 65543, 0, 327695, 65543, 0, 327694, 65543, 0, 327693, 65543, 0, 327692, 65543, 0, 327691, 65543, 0, 327690, 65543, 0, 327689, 65543, 0, 327688, 65543, 0, 327687, 65543, 0, 327686, 65543, 0, 327685, 65543, 0, 327684, 65543, 0, 327683, 65543, 0, 327682, 65543, 0, 393218, 65543, 0, 393219, 65543, 0, 393220, 65543, 0, 393221, 65543, 0, 393222, 65543, 0, 393223, 65543, 0, 393224, 65543, 0, 393225, 65543, 0, 393226, 65543, 0, 393227, 65543, 0, 393228, 65543, 0, 393229, 65543, 0, 393230, 65543, 0, 393231, 65543, 0, 393232, 65543, 0, 393233, 65543, 0, 393234, 65543, 0, 393235, 65543, 0, 393236, 65543, 0, 393237, 65543, 0)

[node name="CharacterBody2D" parent="." instance=ExtResource("3_pya8d")]
z_index = -1
position = Vector2(-40, 22)
JUMP_VELOCITY = -420.0

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(3, 3)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(55, 92)
texture = ExtResource("4_756g7")

[node name="1S3" type="Area2D" parent="."]
position = Vector2(319, 72)
collision_mask = 4
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="1S3"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_qewwi")

[node name="1S2" type="Area2D" parent="."]
position = Vector2(306, -41)
collision_mask = 4
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="1S2"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_6ekb7")

[node name="1S1" type="Area2D" parent="."]
position = Vector2(312, -204)
collision_mask = 4
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="1S1"]
position = Vector2(1.5, -4.75)
shape = SubResource("RectangleShape2D_e4hbo")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Water" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water"]
position = Vector2(188.5, 107.5)
shape = SubResource("RectangleShape2D_2spdq")

[connection signal="body_entered" from="1S3" to="." method="_on_s_3_body_entered"]
[connection signal="body_entered" from="1S2" to="." method="_on_s_2_body_entered"]
[connection signal="body_entered" from="1S1" to="." method="_on_s_1_body_entered"]
[connection signal="body_entered" from="Water" to="." method="_on_water_body_entered"]
